--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "common": "^0.2.5",
     "guard": "^0.1.2",
+    "helpers": "^0.0.6",
     "loader": "^2.1.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
+    "observer": "^0.0.2",
+    "onscrolling": "^1.0.0",
     "simplelightbox": "^2.14.2"
   },
   "devDependencies": {
